GH-395 Implement revoke for FR Enedis Region Connector