@@ -6,6 +6,7 @@ import energy.eddie.api.v0.process.model.StateTransitionException;
 import energy.eddie.regionconnector.es.datadis.ConsumptionRecordMapper;
 import energy.eddie.regionconnector.es.datadis.InvalidMappingException;
 import energy.eddie.regionconnector.es.datadis.api.DataApi;
+import energy.eddie.regionconnector.es.datadis.api.DatadisApiException;
 import energy.eddie.regionconnector.es.datadis.api.MeasurementType;
 import energy.eddie.regionconnector.es.datadis.api.UnauthorizedException;
 import energy.eddie.regionconnector.es.datadis.dtos.MeteringData;
@@ -22,6 +23,7 @@ import reactor.adapter.JdkFlowAdapter;
 import reactor.core.publisher.Mono;
 import reactor.core.publisher.Sinks;
 import reactor.util.retry.Retry;
+import reactor.util.retry.RetryBackoffSpec;
 
 import java.time.Duration;
 import java.time.LocalDate;
@@ -37,6 +39,8 @@ import static energy.eddie.regionconnector.es.datadis.utils.DatadisSpecificConst
 
 public class DatadisScheduler implements Mvp1ConsumptionRecordProvider, AutoCloseable {
     private static final Logger LOGGER = LoggerFactory.getLogger(DatadisScheduler.class);
+    private static final RetryBackoffSpec RETRY_BACKOFF_SPEC = Retry.fixedDelay(10, Duration.ofMinutes(1))
+            .filter(ex -> !(ex instanceof DatadisApiException) && !(ex.getCause() instanceof DatadisApiException));
     private final DataApi dataApi;
     private final Sinks.Many<ConsumptionRecord> consumptionRecords;
 
@@ -89,15 +93,13 @@ public class DatadisScheduler implements Mvp1ConsumptionRecordProvider, AutoClos
         }
 
         dataApi.getSupplies(permissionRequest.nif(), null)
-                .doOnError(e -> {
-                    onError(permissionRequest, e);
-                })
                 .flatMap(this::validateSupplies)
-                .retryWhen(Retry.fixedDelay(10, Duration.ofMinutes(1))) // after the user has accepted the permission, the data might not be available immediately
+                .retryWhen(RETRY_BACKOFF_SPEC) // after the user has accepted the permission, the data might not be available immediately
                 .flatMap(supplies -> prepareMeteringDataRequest(permissionRequest, supplies))
                 .flatMap(dataApi::getConsumptionKwh)
                 .flatMap(meteringData -> processMeteringData(
                         meteringData, permissionRequest, consumptionRecords))
+                .doOnError(e -> onError(permissionRequest, e))
                 .subscribe();
     }
 
@@ -159,7 +161,7 @@ public class DatadisScheduler implements Mvp1ConsumptionRecordProvider, AutoClos
 
         // remove metering data that is not in the requested time range
         meteringData.removeIf(notInRequestedRange(from, to));
-        permissionRequest.setLastPulledMeterReading(Objects.requireNonNull(meteringData.get(meteringData.size() - 1).date()).atStartOfDay(ZoneOffset.UTC));
+        permissionRequest.setLastPulledMeterReading(Objects.requireNonNull(meteringData.getLast().date()).atStartOfDay(ZoneOffset.UTC));
 
         try {
             ConsumptionRecord consumptionRecord = ConsumptionRecordMapper.mapToCIM(
